--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: method_extractor
 description: Annotation
-version: 1.2.0+1
+version: 2.1.0
 repository: https://github.com/LiewJunTung/Method-Extractor
 
 environment:
-  sdk: ">=2.9.0 <3.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 dev_dependencies:
-  test: ^1.15.4
+  test: ^1.17.5
